--- a/part8/library-backend/package.json
+++ b/part8/library-backend/package.json
@@ -15,11 +15,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "apollo-server": "^3.5.0",
-    "apollo-server-core": "^3.5.0",
+    "apollo-server": "^2.25.2",
     "dotenv": "^10.0.0",
+    "express": "^4.17.2",
     "graphql": "^15.8.0",
-    "mongoose": "^6.1.4",
-    "mongoose-unique-validator": "^3.0.0"
+    "graphql-subscriptions": "^2.0.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.6.2",
+    "mongoose-unique-validator": "^2.0.3"
   }
 }
